Fix spacing issues on contact form

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body > section.banner {
   text-align: center;
   padding-top: 20vh;
   padding-bottom: 20vh;
+  height: 90vh;
 }
 @-webkit-keyframes rotating /* Safari and Chrome */ {
   from {
@@ -134,7 +135,6 @@ body#home > section.banner > div {
 */
 body#contact > section.banner {
   background-image: url('img/contact.jpg');
-  height: 90vh;
 }
 body#contact > section.banner > form {
   display: inline-block;
@@ -152,7 +152,9 @@ body#contact > section.banner > form {
   box-shadow: 0px 0px 4px black;
 }
 body#contact > section.banner > form > * {
-  display: inline-block;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
   max-width: 400px;
   margin-bottom: 10px;
